# 2024-vision

./: .clang-format  .gitignore  .gitmodules  .meson.build.swp  app.py  cone-params.txt  cube-params.txt  disk-params.txt  manager.sh  meson.build  package-lock.json  package.json  ring-params.txt  run-web
templates/: .index.html.swp  cone.html  cube.html  index.html  layout.html  loading.html  streams.html  tune-select.html  tune.html
tune/src/: tune.cpp
vision/: Cameras.cpp  Cameras.h  depthCamera.cpp  detection.cpp  detection.h  globals.h  graphics_helpers.cpp  graphics_helpers.h  main.cpp  main.h  pose_estimation.cpp  pose_estimation.h  usbCamera.cpp
